--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <img src="images/plane2.jpg" width="100" />
         <a href="https://dozr.com/blog/everything-you-need-to-know-about-trucks" ><img src="images/truck.jpg" width="100" /></a><br>
         <a href="https://www.google.co.za">Click to go to Google</a>
-
-                <object data="list.html" width="100%" height="500px" ></object>
+        
+             <object data="list.html" width="100%" Height="500px" ></object>
+                
     </Body>
 </HTML>
