--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="https://dozr.com/blog/everything-you-need-to-know-about-trucks" ><img src="images/truck.jpg" width="100" /></a><br>
         <a href="https://www.google.co.za">Click to go to Google</a>
         
-             <object data="list.html" width="100%" Height="500px" ></object>
+             <!--<object data="list.html" width="100%" Height="500px" ></object>-->
                 
     </Body>
 </HTML>
